--- a/scss/main.scss
+++ b/scss/main.scss
@@ -713,7 +713,7 @@ body {
                         overflow: auto;
                     }
                     
-                    #publish, #month, #location {
+                    #publish, #month, #location, #shiftView {
                         padding: 20px;
                     }
                     #location {
