--- a/views/index.html
+++ b/views/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="/public/css/jquery.jscrollpane.css">
+    <link rel="stylesheet" href="/public/css/datepicker.css">
     <link rel="stylesheet" href="/public/css/main.css">    
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/public/js/jquery.jscrollpane.min.js"></script>
     <script type="text/javascript" src="/public/js/jquery.typeahead.js"></script>
+    <script type="text/javascript" src="/public/js/bootstrap-datepicker.js"></script>
     <script type="text/javascript" src="/public/js/rision.js"></script>
 </head>
 
@@ -59,11 +61,32 @@
                     <ul class="nav nav-tabs" role="tablist">
                         <li role="presentation"><a href="#location" aria-controls="location" role="tab" data-toggle="tab">Sheppy: community</a></li>
                         <li role="presentation" class="active"><a href="#shift" aria-controls="shift" role="tab" data-toggle="tab">Shifts</a></li>
+                        <li role="presentation" class=""><a href="#shiftView" aria-controls="shiftView" role="tab" data-toggle="tab">April</a></li>
                         <li role="presentation"><a href="#publish" aria-controls="publish" role="tab" data-toggle="tab">Publish</a></li>
                     </ul>
 
                     <!-- Tab panes -->
                     <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane" id="shiftView">
+                            <div class="btn-group" role="group" aria-label="select view">
+  <button type="button" class="btn btn-default">Day</button>
+  <button type="button" class="btn btn-default">Week</button>
+  <button type="button" class="btn btn-primary">Month</button>
+</div>
+                            
+<form class="form-inline">
+                            <div class="btn-group" role="group" aria-labe="select month">
+                                <button type="button" class="btn btn-default"><span class="sr-only">Previous</span><i class="fa fa-chevron-left"></i></button>
+                            </div>
+<div class="input-group date col-2" id="datepicker" data-date="04-2017" data-date-format="mm-yyyy">
+  <input class="form-control span2 col-2" size="16" type="text" value="04-2017">
+  <span class="input-group-addon add-on"><i class="fa fa-calendar"></i></span>
+</div>
+                                <button type="button" class="btn btn-default"><span class="sr-only">Next</span><i class="fa fa-chevron-right"></i></button>
+    
+    </form>                            
+                        </div>
+                        
                         <div role="tabpanel" class="tab-pane" id="location">
      <form id="form-country_v1" name="form-country_v1">
     <div class="typeahead__container">
