--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,17 @@
 @charset "UTF-8";
+.expose {
+  position: relative; }
+
+#overlay {
+  background: rgba(0, 0, 0, 0.3);
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1002; }
+
 .typeahead__container {
   /**
      * Restore the font weight unset by the previous rule.
@@ -512,14 +525,24 @@ body {
             width: 160px;
             padding: 10px;
             background: #fff;
-            color: #fff;
+            border-bottom: 1px solid #ededee;
+            border-right: 1px solid #ededee;
+            color: #000333;
             min-height: 65px; }
             body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li .shortcode {
               float: left;
               font-size: 19px;
               font-weight: 900;
               padding-right: 10px;
-              line-height: 36px; }
+              line-height: 36px;
+              margin-right: 5px;
+              border: 4px solid #000333;
+              border-radius: 40px;
+              width: 40px;
+              height: 40px;
+              text-align: center;
+              padding: 0;
+              line-height: 32px; }
             body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li .name {
               white-space: nowrap;
               overflow: hidden;
@@ -539,33 +562,38 @@ body {
               text-overflow: fade;
               text-overflow: fade(10px);
               text-overflow: fade(5%); }
-            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.green {
+            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.green .shortcode {
               background: #2acaad;
               border: 4px solid #2acaad; }
-            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.blue {
+            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.blue .shortcode {
               background: #5576f7;
               border: 4px solid #5576f7; }
-            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.white {
+            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.blue .name {
+              color: #fff; }
+            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.white .shortcode {
               background: #fff;
               color: #000333; }
-            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.gray {
+            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.gray .shortcode {
               background: #a3a6aa;
               color: #000333; }
-            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.red {
+            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.black .shortcode {
+              background: #000333;
+              color: #fff; }
+            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.red .shortcode {
               background: #ff8080;
               color: #000333; }
-            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.border-green {
+            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.border-green .shortcode {
               border: 4px solid #22a28a; }
-            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.border-blue {
+            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.border-blue .shortcode {
               border: 4px solid #445ec6; }
-            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.border-red {
+            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.border-red .shortcode {
               border: 4px solid #cc0000; }
-            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.border-gray {
+            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.border-gray .shortcode {
               border: 4px solid #6c7076; }
-            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.border-white {
+            body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.border-white .shortcode {
               border: 4px solid #dadbdd; }
             body nav.rision-ribbon .nav-tabs + .tab-content #shift ul li.selected {
-              border: 4px solid #ff804d !important; }
+              box-shadow: inset 0px 0px 0px 4px #ff804d; }
   body section#calendar {
     position: relative; }
     body section#calendar #left-side-split {
@@ -640,6 +668,8 @@ body {
           text-overflow: fade(5%); }
           body section#calendar #left-side ul li span {
             display: none; }
+          body section#calendar #left-side ul li.selected {
+            background: #ffc0a6; }
     body section#calendar #left-side.open + div + main {
       padding-left: 161px;
       width: 100%;
@@ -727,12 +757,14 @@ body {
       body section#calendar main td .shift-do, body section#calendar main td .shift-ro, body section#calendar main td .shift-sd, body section#calendar main td .shift-sp, body section#calendar main td .shift-al {
         background: #fff;
         color: #000333; }
-      body section#calendar main td .shift-do, body section#calendar main td .shift-ro, body section#calendar main td .shift-sk {
+      body section#calendar main td .shift-do, body section#calendar main td .shift-ro {
         box-shadow: 0 0 0 2pt #cc0000, 0 0 20px rgba(0, 0, 0, 0.2); }
       body section#calendar main td .shift-al, body section#calendar main td .shift-sd, body section#calendar main td .shift-al, body section#calendar main td .shift-sp {
         box-shadow: none; }
-      body section#calendar main td .shift-sk {
-        background: #ff8080; }
+      body section#calendar main td .shift-sk, body section#calendar main td .shift-al {
+        background: #000333;
+        color: #fff;
+        border: 2px solid #000333; }
       body section#calendar main .jspHorizontalBar {
         position: fixed;
         bottom: 0;
